test/libyul/yulSyntaxTests/empty_call.yul
{ () }
// ----
// ParserError 1856: (2-3): Literal or identifier expected.
